# chem_mat_data_identify

./: .gitignore  README.md  predict_by_title.py  pyproject.toml  requirements.txt  train_classifier.py
data/: README.md  dataset_all.jsonl  dataset_test.jsonl  dataset_train.jsonl  negatives.jsonl  positives.jsonl  potential_positives_titles_only.txt
data/archive/: manual2_title_abstract.txt  manual_links.txt  negatives_labeled.jsonl  negatives_raw.jsonl  positives_labeled.jsonl  positives_raw.jsonl
data/scripts/: build_negatives.py  fetch_openalex.py  merge_jsonl.py  split_train_test.py
outputs/: preds_r5_r8_qkvo_len224.jsonl
outputs/classifier_448/: adapter_config.json  metrics.json  test_predictions.jsonl
outputs/classifier_448/checkpoint-976/: rng_state.pth  scheduler.pt  tokenizer.json  trainer_state.json
outputs/r5_r8_qkvo_len224/: README.md  adapter_config.json  dataset_stats.json  label_map.json  tokenizer.json
outputs/r5_r8_qkvo_len224/checkpoint-115/: rng_state.pth  trainer_state.json
src/: eval_on_test.py  predict_by_title.py  train_classifier.py
tools/: fetch_openalex.py  token_lengths_stats.py
utils/: fetch_openalex.py  token_lengths_stats.py  train_val_test_split.py  visual_helper.py
